# LLVM-11-Tutorials

./: BuildAllFiles.sh  README.md
Implementations/: CMakeLists.txt
Implementations/HI_APIntSrcAnalysis/: HI_APIntSrcAnalysis.h
Implementations/HI_AggressiveLSR_MUL/: HI_AggressiveLSR_MUL.cc  HI_AggressiveLSR_MUL.h
Implementations/HI_ArrayAccessPattern/: HI_ArrayAccessPattern.h
Implementations/HI_ArraySensitiveToLoopLevel/: HI_ArraySensitiveToLoopLevel.h
Implementations/HI_DependenceList/: HI_DependenceList.h
Implementations/HI_FindFunctions/: HI_FindFunction.h
Implementations/HI_FunctionInstantiation/: HI_FunctionInstantiation.cc
Implementations/HI_FunctionInterfaceInfo/: HI_FunctionInterfaceInfo.h
Implementations/HI_HLSDuplicateInstRm/: HI_HLSDuplicateInstRm.h
Implementations/HI_IR2SourceCode/: HI_IR2SourceCode.h
Implementations/HI_InstructionLatencyCollect/: HI_InstructionLatencyCollect.h
Implementations/HI_IntstructionMoveBackward/: HI_IntstructionMoveBackward.h
Implementations/HI_LoopDependenceAnalysis/: HI_LoopDependenceAnalysis.h
Implementations/HI_LoopInFormationCollect/: HI_LoopInFormationCollect.h
Implementations/HI_LoopLabeler/: HI_LoopLabeler.h
Implementations/HI_LoopUnroll/: HI_LoopUnroll.h
Implementations/HI_MulOrderOpt/: HI_MulOrderOpt.h
Implementations/HI_MuxInsertionArrayPartition/: HI_MuxInsertionArrayPartition.h
Implementations/HI_NoDirectiveTimingResourceEvaluation/: HI_NoDirectiveTimingResourceEvaluation.h  HI_NoDirectiveTimingResourceEvaluation_LoopEvaluation.cc
Implementations/HI_Polly_Info/: HI_Polly_Info.h
Implementations/HI_PragmaTargetExtraction/: HI_PragmaTargetExtraction.h
Implementations/HI_RemoveRedundantAccess/: HI_RemoveRedundantAccess.h
Implementations/HI_ReplaceSelectAccess/: HI_ReplaceSelectAccess.h
Implementations/HI_SeparateConstOffsetFromGEP/: HI_SeparateConstOffsetFromGEP.h
Implementations/HI_SimpleTimingEvaluation/: HI_SimpleTimingEvaluation.h
Implementations/HI_TopLoop2Func/: HI_TopLoop2Func.h
Implementations/HI_VarWidthReduce/: HI_VarWidthReduce.h
Implementations/HI_WithDirectiveTimingResourceEvaluation/: HI_WithDirectiveTimingResourceEvaluation.h
Tests/Hi_ClockFlow/: CMakeLists.txt  Hi_ClockFlow.h  Pre_Process.h
Tests/LLVM_Learner_Libs/: CMakeLists.txt
Tests/LLVM_exp0_find_functions/: CMakeLists.txt
Tests/LLVM_exp10_HI_APIntegerAnalysis/: CMakeLists.txt
Tests/LLVM_exp10_HI_LoopLabeler/: CMakeLists.txt
Tests/LLVM_exp11_HI_clang_import_test/: CMakeLists.txt  LLVM_exp11_HI_clang_import_test.cc
Tests/LLVM_exp12_HI_NoDirectiveTimingResourceEvaluation/: CMakeLists.txt  LLVM_exp12_HI_NoDirectiveTimingResourceEvaluation.h
Tests/LLVM_exp12a_HI_InstructionMoveBackward/: CMakeLists.txt  LLVM_exp12a_HI_InstructionMoveBackward.h
Tests/LLVM_exp12b_HI_ResourceEvaluation/: CMakeLists.txt  LLVM_exp12b_HI_ResourceEvaluation.h
Tests/LLVM_exp12c_HI_AggressiveLSR_MUL/: CMakeLists.txt  LLVM_exp12c_HI_AggressiveLSR_MUL.h
Tests/LLVM_exp13_HI_ArrayAccessPattern/: CMakeLists.txt  LLVM_exp13_HI_ArrayAccessPattern.h
Tests/LLVM_exp13a_HI_FunctionInstantiation/: CMakeLists.txt  LLVM_exp13a_HI_FunctionInstantiation.h
Tests/LLVM_exp13b_HI_ReplaceSelectAccess/: CMakeLists.txt  LLVM_exp13b_HI_ReplaceSelectAccess.h
Tests/LLVM_exp13c_HI_IR2SourceCode/: CMakeLists.txt  LLVM_exp13c_HI_IR2SourceCode.cc  LLVM_exp13c_HI_IR2SourceCode.h
Tests/LLVM_exp13d_HI_LoopUnroll/: CMakeLists.txt  LLVM_exp13d_HI_LoopUnroll.h
Tests/LLVM_exp14_HI_WithDirectiveTimingResourceEvaluation/: CMakeLists.txt  LLVM_exp14_HI_WithDirectiveTimingResourceEvaluation.h
Tests/LLVM_exp1_dependence_list/: CMakeLists.txt
Tests/LLVM_exp2_loop_processing/: CMakeLists.txt  LLVM_exp2_loop_processing.cc
Tests/LLVM_exp3_loop_info_extraction/: CMakeLists.txt  LLVM_exp3_loop_info_extraction.h
Tests/LLVM_exp4_polly_info/: CMakeLists.txt  LLVM_exp4_polly_info.h
Tests/LLVM_exp5_SimpleTimingAnalysis/: CMakeLists.txt  LLVM_exp5_SimpleTimingAnalysis.h
Tests/LLVM_exp5a_InstrucitonList/: CMakeLists.txt  LLVM_exp0_InstrucitonList.h
Tests/LLVM_exp6_GEP_Transformation/: CMakeLists.txt  LLVM_exp6_GEP_Transformation.h
Tests/LLVM_exp7_DuplicateInstRemove/: CMakeLists.txt  LLVM_exp7_DuplicateInstRemove.h
Tests/LLVM_exp8_VarWidthReduce/: CMakeLists.txt  LLVM_exp8_VarWidthReduce.h
Tests/LLVM_exp9_HI_SepConstGEP/: CMakeLists.txt  (+1 more)
(+4 files in other folders)
